Add user permission grant
